--- a/recipes/kogi-taco.html
+++ b/recipes/kogi-taco.html
@@ -7,6 +7,8 @@
 
 <body>
     <h1>Kogi Tacos: When You Take Mexico and Add it to Korea</h1>
+    <img src="https://cdn.vox-cdn.com/thumbor/23IMTbP2ZkQyzJ0eFpU96OwNZCU=/1400x788/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/15992893/C19_Kogi_Tacos.jpg">
+    
 </body>
 
 
