add desc. to kogi-taco.html

--- a/recipes/kogi-taco.html
+++ b/recipes/kogi-taco.html
@@ -8,7 +8,15 @@
 <body>
     <a href="../index.html">back to recipe hub </a>
     <h1>Kogi Tacos: When You Take Mexico and Add it to Korea</h1>
-    <img src="https://cdn.vox-cdn.com/thumbor/23IMTbP2ZkQyzJ0eFpU96OwNZCU=/1400x788/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/15992893/C19_Kogi_Tacos.jpg">
+    <img src=
+    "https://cdn.vox-cdn.com/thumbor/23IMTbP2ZkQyzJ0eFpU96OwNZCU=/1400x788/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/15992893/C19_Kogi_Tacos.jpg">
+
+    <p>Kogi beef tacos are an iconic piece of LA food culture.
+        They are the product of a beautiful fusion between the timeless
+        Mexican taco and the vibrant Korean taste. I challenge you to find
+        somone who does not love these!
+    </p>
+
 
 </body>
 
