--- a/recipes/kogi-taco.html
+++ b/recipes/kogi-taco.html
@@ -11,11 +11,33 @@
     <img src=
     "https://cdn.vox-cdn.com/thumbor/23IMTbP2ZkQyzJ0eFpU96OwNZCU=/1400x788/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/15992893/C19_Kogi_Tacos.jpg">
 
-    <p>Kogi beef tacos are an iconic piece of LA food culture.
+    <p>
+        Kogi beef tacos are an iconic piece of LA food culture.
         They are the product of a beautiful fusion between the timeless
         Mexican taco and the vibrant Korean taste. I challenge you to find
         somone who does not love these!
+
     </p>
+
+    <ul>Beef Prep. Ingredients</ul>
+    <li>12-15 small taco tortillas</li>
+    <li>3 pounds of beef short ribs</li>
+    <li>1 cup of soy sauce</li>
+    <li>1/2 cup of dark brown sugar</li>
+    <li>1/4 cup of sesame oil</li>
+    <li>6 cloves of garlic</li>
+    <li>6 scallions</li>
+    <li>2 tsps of peeled + grated ginger</li>
+
+
+    <ul>Korean-Style Slaw Ingredients</ul>
+    <li>3 cups of chopped Napa cabbage</li>
+    <li>1 cup matchstick-size daikon slices</li>
+    <li>3 tbps of chopped cilantro</li>
+    <li>6 scallions diced</li>
+
+
+    
 
 
 </body>
