add cook steps to kogi-taco.html + fix list format

--- a/recipes/kogi-taco.html
+++ b/recipes/kogi-taco.html
@@ -19,7 +19,7 @@
 
     </p>
 
-    <ul>Beef Prep. Ingredients</ul>
+    <ul>Beef Prep. Ingredients
     <li>12-15 small taco tortillas</li>
     <li>3 pounds of beef short ribs</li>
     <li>1 cup of soy sauce</li>
@@ -28,14 +28,45 @@
     <li>6 cloves of garlic</li>
     <li>6 scallions</li>
     <li>2 tsps of peeled + grated ginger</li>
+</ul>
 
-
-    <ul>Korean-Style Slaw Ingredients</ul>
+    <ul>Korean-Style Slaw Ingredients
     <li>3 cups of chopped Napa cabbage</li>
     <li>1 cup matchstick-size daikon slices</li>
     <li>3 tbps of chopped cilantro</li>
     <li>6 scallions diced</li>
+</ul>
 
+    <ol>Directions
+<li>Cut off excess fat and thinly slice beef into small strips.
+    Place beef into plastic container or resealable bag.</li>
+
+
+<li>In a blender or food processor, blend the soy sauce, mirin, 
+    sugar, sesame oil, garlic, scallions and ginger. 
+    Pour half of the sauce over the short ribs, ensuring all the 
+    beef is covered. Seal tightly and marinate the short ribs 
+    in the refrigerator for at least 3 hours and up to 24 hours. </li>
+
+    <li>Place the other half of the marinade in a pan and reduce 
+        over medium heat, stirring occasionally, until the mixture is 
+        thick. Place in a serving bowl and reserve to drizzle on the 
+        tacos. </li>
+
+        <li>For the slaw: Place the cabbage, daikon, cilantro 
+            and scallions together in a medium to large bowl. </li>
+
+            <li>For the taco assembly: Heat your griddle to high. 
+                Flash cook the meat while simultaneously caramelizing 
+                the marinade. Place your short ribs on the griddle. 
+                Cook for 2 to 3 minutes and flip. Cook an additional 
+                3 minutes, then wrap the meat in foil and set aside. 
+            </li>
+
+            <li>On the grilled tortillas, pile some Korean slaw, dressing, beef, 
+                reserved and reduced marinade and extra Sriracha to 
+                taste. Then, chow down. </li>
+            </ol>
 
     
 
