add bold and italics totext

--- a/recipes/kogi-taco.html
+++ b/recipes/kogi-taco.html
@@ -14,12 +14,12 @@
     <p>
         Kogi beef tacos are an iconic piece of LA food culture.
         They are the product of a beautiful fusion between the timeless
-        Mexican taco and the vibrant Korean taste. I challenge you to find
-        somone who does not love these!
+        <em>Mexican</em> taco and the vibrant <em> Korean </em> taste. 
+        I challenge you to find somone who does not love these!
 
     </p>
 
-    <ul>Beef Prep. Ingredients
+<ul> <strong>Beef Preperation Ingredients</strong>
     <li>12-15 small taco tortillas</li>
     <li>3 pounds of beef short ribs</li>
     <li>1 cup of soy sauce</li>
@@ -30,19 +30,19 @@
     <li>2 tsps of peeled + grated ginger</li>
 </ul>
 
-    <ul>Korean-Style Slaw Ingredients
+    <ul> <strong>Korean-Style Slaw Ingredients</strong>
     <li>3 cups of chopped Napa cabbage</li>
     <li>1 cup matchstick-size daikon slices</li>
     <li>3 tbps of chopped cilantro</li>
     <li>6 scallions diced</li>
 </ul>
 
-    <ol>Directions
-<li>Cut off excess fat and thinly slice beef into small strips.
+<ol> <strong>Directions</strong>
+    <li>Cut off excess fat and thinly slice beef into small strips.
     Place beef into plastic container or resealable bag.</li>
 
 
-<li>In a blender or food processor, blend the soy sauce, mirin, 
+    <li>In a blender or food processor, blend the soy sauce, mirin, 
     sugar, sesame oil, garlic, scallions and ginger. 
     Pour half of the sauce over the short ribs, ensuring all the 
     beef is covered. Seal tightly and marinate the short ribs 
@@ -53,17 +53,17 @@
         thick. Place in a serving bowl and reserve to drizzle on the 
         tacos. </li>
 
-        <li>For the slaw: Place the cabbage, daikon, cilantro 
+    <li>For the slaw: Place the cabbage, daikon, cilantro 
             and scallions together in a medium to large bowl. </li>
 
-            <li>For the taco assembly: Heat your griddle to high. 
+    <li>For the taco assembly: Heat your griddle to high. 
                 Flash cook the meat while simultaneously caramelizing 
                 the marinade. Place your short ribs on the griddle. 
                 Cook for 2 to 3 minutes and flip. Cook an additional 
                 3 minutes, then wrap the meat in foil and set aside. 
             </li>
 
-            <li>On the grilled tortillas, pile some Korean slaw, dressing, beef, 
+    <li>On the grilled tortillas, pile some Korean slaw, dressing, beef, 
                 reserved and reduced marinade and extra Sriracha to 
                 taste. Then, chow down. </li>
             </ol>
