--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/kogi-taco.html">Kogi Tacos</a>
+  <ul>
+   <li> <a href="recipes/kogi-taco.html">Kogi Tacos</a> </li>
+    <li> <a href="recipes/pancakes.html">Pancakes</a> </li>
+
+  </ul>
 </body>
 
 
