add ingredients and steps

--- a/recipes/pancakes.html
+++ b/recipes/pancakes.html
@@ -17,6 +17,31 @@
     as they are easy to make.
 </p>
 
+<ul><strong>Ingredients</strong>
+<li>milk</li>
+<li>sugar</li>
+<li>flour</li>
+<li>eggs</li>
+<li>butter</li>
+<li>syrup</li>
+
+<ol><strong>Directions</strong>
+<li>First, mix your eggs, flour, milk and sugar together. Mix until
+    the consistency is thick and thorough.</li>
+    <li>Next, warm up the butter and mix it in with the pancake mix.</li>
+    <li>Now pour the mix onto a hot and buttered pan, about 
+        6 inches in diameter. Cook until bubbles pop then
+        flip and cook until golden brown. Pour syrup and enjoy./li>
+
+
+
+
+</ol>
+
+
+
+
+</ul>
 
 </body>
 
