--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <ul>
    <li> <a href="recipes/kogi-taco.html">Kogi Tacos</a> </li>
     <li> <a href="recipes/pancakes.html">Pancakes</a> </li>
+    <li> <a href="recipes/omelet.html"> Omelet</a> </li>
 
   </ul>
 </body>
