--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 
 <head>
 <meta charset="utf-8">
-<title>Odin Recipes</title>
+<link rel="stylesheet" href="styles.css">
+<title>Frank's Recipe Book</title>
 </head>
 
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Frank's Recipe Book</h1>
   <ul>
    <li> <a href="recipes/kogi-taco.html">Kogi Tacos</a> </li>
     <li> <a href="recipes/pancakes.html">Pancakes</a> </li>
