add chef logo to index.html

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 
 <body>
     <h1>Frank's Recipe Book</h1>
+    <img id="chef-logo" src="https://static.vecteezy.com/system/resources/previews/001/208/696/original/chef-png.png" alt="digital
+    and minimalistic image of a chef, all in one solid black color">
   <ul>
-   <li> <a href="recipes/kogi-taco.html">Kogi Tacos</a> </li>
-    <li> <a href="recipes/pancakes.html">Pancakes</a> </li>
-    <li> <a href="recipes/omelet.html"> Omelet</a> </li>
+   <li class="food"> <a href="recipes/kogi-taco.html">Kogi Tacos</a> </li>
+    <li class="food"> <a href="recipes/pancakes.html">Pancakes</a> </li>
+    <li class="food"> <a href="recipes/omelet.html">Omelet</a> </li>
 
   </ul>
 </body>
