--- a/recipes/kogi-taco.html
+++ b/recipes/kogi-taco.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
     <title>Kogi Tacos</title>
 </head>
 
 <body>
     <a href="../index.html">back to recipe hub </a>
     <h1>Kogi Tacos: When You Take Mexico and Add it to Korea</h1>
-    <img src=
+    <img class="image" src=
     "https://cdn.vox-cdn.com/thumbor/23IMTbP2ZkQyzJ0eFpU96OwNZCU=/1400x788/filters:format(jpeg)/cdn.vox-cdn.com/uploads/chorus_asset/file/15992893/C19_Kogi_Tacos.jpg">
 
     <p>
